# utils

./: .claude  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  CLAUDE.md  EXAMPLES_MODEL_FEATURES.md  README.md  package.json  pyproject.toml  tsconfig.json
claude/: PATTERNS.md  TOOLS.md
claude/commands/: analyze.md  cleanup.md  code-review.md  debug.md  execute.md  fix-tests.md  git-cleanup.md  git-commit.md  normalize.md  plan.md  prod-ready.md  tools.md
claude/references/: example-analysis.md
config/: .bashrc  .editorconfig  .env.example  .gitconfig  .gitignore_global  .pre-commit-config.yaml  .prettierrc  .tmux.conf  .vimrc  .zshrc  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  vscode-settings.json
config/github-workflows/: ci.yml  release.yml
examples/: terminal_demo.py
features/: add-comprehensive-comments.md  cache-hash-json.md  falcon-server-template.md  gitignore-setup.md  global-registry.md  pydantic-utilities.md  remove-redundancy.md  session-utilities.md  static-utility-refactor.md  string-snake-case-vs-logger-normalize-key.md  structured-logger.md  tie-generic-pipeline.md
scripts/: archive_tool.py  clean.py  cron_tool.py  csv_tool.py  db_tool.py  deps.py  diff_tool.py  encode_tool.py  env_tool.py  gen_tool.py  git_tool.py  http_tool.py  ip_tool.py  json_tool.py  lint.py  regex_tool.py  release.py  serve.py  setup.py  template_tool.py  test.py  text_tool.py  time_tool.py  validate_tool.py  watch.py
tests/: test_beacon.py  test_collections.py  test_common.py  test_convert.py  test_datetime.py  test_dict.py  test_encoding.py  test_env.py  test_extra_fields_mode.py  test_file_io.py  test_hash.py  test_imports.py  test_integer.py  test_iterable.py  test_json_db.py  test_json_encoder.py  test_json_utils.py  test_logger.py  test_misc.py  test_model.py  test_path.py  test_pydantic_config_compatibility.py  test_pydantic_model.py  test_pydantic_model_simple.py  test_pydantic_native_features.py  test_pydantic_types.py  test_pydantic_validator.py  test_random_utils.py  test_regex.py  test_session.py  test_session_auth.py  test_session_batch.py  test_session_cache.py  test_session_hooks.py  test_session_metrics_enhanced.py  test_session_retry.py  test_session_streaming.py  test_string.py  test_terminal.py  test_validation.py
tests/scripts/: conftest.py  test_archive_tool.py  test_clean.py  test_cron_tool.py  test_csv_tool.py  test_db_tool.py  test_deps.py  test_diff_tool.py  test_encode_tool.py  test_env_tool.py  test_gen_tool.py  test_git_tool.py  test_http_tool.py  test_ip_tool.py  test_json_tool.py  test_lint.py  test_regex_tool.py  test_release.py  test_serve.py  test_setup.py  test_template_tool.py  test_test.py  test_text_tool.py  test_time_tool.py  test_validate_tool.py  test_watch.py
tmp/: test_clean_api_demo.py  test_concurrent_access.py  test_file_safety.py  test_index_demo.py  test_jsondb_demo.py
tmp/clean_api_db/User/: user-001.json
tmp/concurrent_test_db/Counter/: shared.json
tmp/demo_db/User/: 1.json  3.json
tmp/file_safety_db/Document/: test-doc.json
tmp/index_demo_db/ProductWithoutIndex/: widget-001.json
tmp/index_demo_db/UserWithIndex/: user-001.json
utils/: __init__.py  beacon.py  collections.py  common.py  convert.py  datetime.py  decode.py  decorators.py  dict.py  encode.py  encoding.py  env.py  file_io.py  hash.py  integer.py  iterable.py  json_encoder.py  json_utils.py  logger.py  misc.py  model.py  path.py  random_utils.py  regex.py  string.py  terminal.py  validation.py  validator.py
utils/db/: __init__.py
utils/db/json/: __init__.py  json_db.py
utils/model/: README.md  __init__.py  exceptions.py  helpers.py  metaclass.py  model.py  serialization.py
utils/model/fields/: __init__.py  base.py  computed.py  container.py  model_field.py  primitive.py
utils/pydantic/: __init__.py  types.py  validator.py
utils/pydantic_model/: FEATURE_COMPARISON.md  PYDANTIC_COMPATIBILITY.md  README.md  __init__.py  base.py  exceptions.py  helpers.py
utils/session/: __init__.py  auth.py  batch.py  cache.py  hooks.py  retry.py  session.py
