[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "utils"
version = "0.1.0"
description = "Utility library with string wrappers and common functions"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=5.0.0",
]
datetime = [
    "arrow>=1.3.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["RUF022"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]  # Allow long lines in test files

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.hatch.build.targets.wheel]
packages = ["utils"]

[tool.hatch.build]
exclude = [
    "features/",
    "templates/",
    ".vscode/",
    ".pytest_cache/",
    ".ruff_cache/",
    "*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
