# =============================================================================
# pyproject.toml - Python project configuration template
# =============================================================================
# This is a template for new Python projects. Customize as needed.

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "A short description of your project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["python", "utility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

# Runtime dependencies
dependencies = [
    # "requests>=2.31.0",
    # "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/username/project"
Repository = "https://github.com/username/project"
Documentation = "https://github.com/username/project#readme"
Issues = "https://github.com/username/project/issues"

# Optional: CLI entry points
# [project.scripts]
# mycli = "mypackage.cli:main"

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Function call in default argument
    "B905",   # zip without strict=
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["your_package_name"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # Allow unused arguments in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# PYRIGHT - Type Checking
# =============================================================================
[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["src", "your_package_name"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
reportMissingImports = true
reportMissingTypeStubs = false

# =============================================================================
# PYTEST - Testing
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# COVERAGE - Test Coverage
# =============================================================================
[tool.coverage.run]
source = ["your_package_name"]
branch = true
omit = [
    "tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# SETUPTOOLS - Package Discovery
# =============================================================================
[tool.setuptools.packages.find]
where = ["."]  # or ["src"] if using src layout
include = ["your_package_name*"]
exclude = ["tests*"]
